--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -4,7 +4,8 @@ WORKDIR /app
 
 # Устанавливаем зависимости
 COPY core/requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir requests
 
 # Копируем исходники сервиса
 COPY core /app
