--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ POSTGRES_PORT=5432
 
 # удобная строка подключения для core
 DATABASE_URL=postgresql://app:app@db:5432/app_db
+
+TELEGRAM_BOT_TOKEN=123456:ABCDEF_your_token_here
+TELEGRAM_CHAT_ID=123456789
+
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
